VRT Project updated to Local git

--- a/test-output/index.html
+++ b/test-output/index.html
@@ -49,7 +49,7 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-Default_suite">
-                    <span>C:\Users\manoj.ghadei\AppData\Local\Temp\testng-eclipse--269368307\testng-customsuite.xml</span>
+                    <span>C:\Users\manoj.ghadei\AppData\Local\Temp\testng-eclipse--1359190071\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -59,7 +59,7 @@
                 </li>
                 <li>
                   <a href="#" class="navigator-link " panel-name="group-Default_suite">
-                    <span>0 groups</span>
+                    <span>1 group</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -102,7 +102,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.vrt.testcases.HitNTrialTests" hash-for-method="ADMN012(User2, 2, 111111.0, Mgr, System Administrator, 9890983456, Abc@gmail.com, avsLOGO.jpg)">ADMN012(User2, 2, 111111.0, Mgr, System Administrator, 9890983456, Abc@gmail.com, avsLOGO.jpg)</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.vrt.testcases.assetHubTest" hash-for-method="ASSTHB006b(ASSTHB006b, 6b, HeatBath, AAS, HTC, VRT, 1, cu m, 11/25/2019, 1, Weeks, Test Description for ASSTHB0...)">ASSTHB006b(ASSTHB006b, 6b, HeatBath, AAS, HTC, VRT, 1, cu m, 11/25/2019, 1, Weeks, Test Description for ASSTHB0...)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -120,15 +120,17 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">com.vrt.testcases.HitNTrialTests</span>
+              <span class="class-name">com.vrt.testcases.assetHubTest</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="ADMN012(User2, 2, 111111.0, Mgr, System Administrator, 9890983456, Abc@gmail.com, avsLOGO.jpg)">
-                  </a> <!-- ADMN012(User2, 2, 111111.0, Mgr, System Administrator, 9890983456, Abc@gmail.com, avsLOGO.jpg) -->
-                  <span class="method-name">ADMN012</span>
-                  <span class="parameters">(User2, 2, 111111.0, Mgr, System Administrator, 9890983456, Abc@gmail.com, avsLOGO.jpg)</span>
+                  <a name="ASSTHB006b(ASSTHB006b, 6b, HeatBath, AAS, HTC, VRT, 1, cu m, 11/25/2019, 1, Weeks, Test Description for ASSTHB0...)">
+                  </a> <!-- ASSTHB006b(ASSTHB006b, 6b, HeatBath, AAS, HTC, VRT, 1, cu m, 11/25/2019, 1, Weeks, Test Description for ASSTHB0...) -->
+                  <span class="method-name">ASSTHB006b</span>
+                  <span class="parameters">(ASSTHB006b, 6b, HeatBath, AAS, HTC, VRT, 1, cu m, 11/25/2019, 1, Weeks, Test Description for ASSTHB006b)</span>
+                  <em>
+(ASSTHB006b-Verify if No record found message displayed if incorrect Asset Name entered in the Searchfucntionality of Asset hub page)                  </em>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -136,7 +138,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\manoj.ghadei\AppData\Local\Temp\testng-eclipse--269368307\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\manoj.ghadei\AppData\Local\Temp\testng-eclipse--1359190071\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -145,7 +147,7 @@
 &lt;suite guice-stage=&quot;DEVELOPMENT&quot; name=&quot;Default suite&quot;&gt;
   &lt;test thread-count=&quot;5&quot; verbose=&quot;2&quot; name=&quot;Default test&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;com.vrt.testcases.HitNTrialTests&quot;/&gt;
+      &lt;class name=&quot;com.vrt.testcases.assetHubTest&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -169,6 +171,14 @@
             <span class="header-content">Groups for Default suite</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
+            <div class="test-group">
+              <span class="test-group-name">Regression</span>
+              <br/>
+              <div class="method-in-group">
+                <span class="method-in-group-name">ASSTHB006b</span>
+                <br/>
+              </div> <!-- method-in-group -->
+            </div> <!-- test-group -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
         <div panel-name="times-Default_suite" class="panel">
@@ -187,14 +197,14 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'ADMN012')
-data.setCell(0, 2, 'com.vrt.testcases.HitNTrialTests')
-data.setCell(0, 3, 16362);
+data.setCell(0, 1, 'ASSTHB006b')
+data.setCell(0, 2, 'com.vrt.testcases.assetHubTest')
+data.setCell(0, 3, 23237);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 16 seconds</span>
+              <span class="suite-total-time">Total running time: 23 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -220,26 +230,26 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">com.vrt.testcases.HitNTrialTests</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">com.vrt.testcases.assetHubTest</div> <!-- chronological-class-name -->
               <div class="configuration-class before">
-                <span class="method-name">testsetup</span>
+                <span class="method-name">AssetCreationSetup</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-class before -->
               <div class="configuration-method before">
                 <span class="method-name">Setup</span>
-                <span class="method-start">614 ms</span>
+                <span class="method-start">780 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
-                <span class="method-name">ADMN012(User2, 2, 111111.0, Mgr, System Administrator, 9890983456, Abc@gmail.com, avsLOGO.jpg)</span>
-                <span class="method-start">10344 ms</span>
+                <span class="method-name">ASSTHB006b(ASSTHB006b, 6b, HeatBath, AAS, HTC, VRT, 1, cu m, 11/25/2019, 1, Weeks, Test Description for ASSTHB0...)</span>
+                <span class="method-start">9170 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
-                <span class="method-name">Teardown([TestResult name=ADMN012 status=SUCCESS method=HitNTrialTests.ADMN012(java.lang.String, java.lang.St...)</span>
-                <span class="method-start">26709 ms</span>
+                <span class="method-name">Teardown([TestResult name=ASSTHB006b status=SUCCESS method=assetHubTest.ASSTHB006b(java.lang.String, java.lan...)</span>
+                <span class="method-start">32407 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-class after">
-                <span class="method-name">endReport</span>
-                <span class="method-start">26822 ms</span>
+                <span class="method-name">endReport_releaseMomory</span>
+                <span class="method-start">32438 ms</span>
               </div> <!-- configuration-class after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
