--- a/test-output/old/Default suite/classes.html
+++ b/test-output/old/Default suite/classes.html
@@ -4,21 +4,22 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>com.vrt.testcases.HitNTrialTests</td>
+<td>com.vrt.testcases.assetHubTest</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>ADMN012</td>
-<td>&nbsp;</td></tr>
+<td>ASSTHB006b</td>
+<td>Regression </td>
+</tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>testsetup</td>
+<td>AssetCreationSetup</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeMethod</td>
@@ -39,6 +40,6 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>endReport</td>
+<td>endReport_releaseMomory</td>
 <td>&nbsp;</td></tr>
 </table>
