--- a/test-output/ExtentReport_LoginTest.html
+++ b/test-output/ExtentReport_LoginTest.html
@@ -53,7 +53,7 @@
 					<i class='mdi-hardware-desktop-windows'></i>
 				</li>
 				<li>
-					<span class='suite-started-time'>2020-02-04 17:39:17</span>
+					<span class='suite-started-time'>2019-11-26 20:15:20</span>
 				</li>
 				<li>
 					<span>v2.41.1</span>
@@ -83,25 +83,25 @@
 					<div class='col l2 m4 s12'>
 						<div class='card suite-total-time-current'> 
 							<span class='panel-name'>Total Time Taken (Current Run)</span> 
-							<span class='suite-total-time-current-value panel-lead'>0h 0m 15s+673ms</span> 
+							<span class='suite-total-time-current-value panel-lead'>0h 0m 9s+219ms</span> 
 						</div> 
 					</div>
 					<div class='col l2 m4 s12'>
 						<div class='card suite-total-time-overall'> 
 							<span class='panel-name'>Total Time Taken (Overall)</span> 
-							<span class='suite-total-time-overall-value panel-lead'>0h 0m 15s+673ms</span> 
+							<span class='suite-total-time-overall-value panel-lead'>0h 0m 9s+219ms</span> 
 						</div> 
 					</div>
 					<div class='col l2 m4 s6 suite-start-time'>
 						<div class='card accent green-accent'> 
 							<span class='panel-name'>Start</span> 
-							<span class='panel-lead suite-started-time'>2020-02-04 17:39:01</span> 
+							<span class='panel-lead suite-started-time'>2019-11-26 20:15:11</span> 
 						</div> 
 					</div>
 					<div class='col l2 m4 s6 suite-end-time'>
 						<div class='card accent pink-accent'> 
 							<span class='panel-name'>End</span> 
-							<span class='panel-lead suite-ended-time'>2020-02-04 17:39:17</span> 
+							<span class='panel-lead suite-ended-time'>2019-11-26 20:15:20</span> 
 						</div> 
 					</div>
 				</div>
@@ -183,24 +183,20 @@
 											<td>INAS-LP024</td>
 										</tr>
 										<tr>
-											<td>TestSuiteName</td>
-											<td>LoginTest</td>
+											<td>VRT Version</td>
+											<td>1.0.0.41</td>
 										</tr>
 										<tr>
 											<td>BS Version</td>
-											<td>0.6.38</td>
+											<td>0.6.26</td>
 										</tr>
 										<tr>
 											<td>Lgr Version</td>
-											<td>1.3.5</td>
+											<td>1.3.1</td>
 										</tr>
 										<tr>
-											<td>ScriptVersion</td>
-											<td>1.0.0.0</td>
-										</tr>
-										<tr>
-											<td>VRT Version</td>
-											<td>1.0.0.44</td>
+											<td>TestSuiteName</td>
+											<td>LoginTest</td>
 										</tr>
 								</tbody>
 							</table>
@@ -257,17 +253,17 @@
 						<div class='card-panel no-padding-h no-padding-v no-margin-v'>
 							<div class='wrapper'>
 								<ul id='test-collection' class='test-collection'>
-										<li class='collection-item test displayed active pass ' extentid='c9baf253-5faf-4873-9692-65ef6204265a'>
+										<li class='collection-item test displayed active pass ' extentid='ecaa1db7-9087-4273-973a-a9abf2edb433'>
 											<div class='test-head'>
-												<span class='test-name'>LOGIN_001- Verify if user can log into the Kaye Application after installation with default provided credentials </span>
+												<span class='test-name'>LOGIN_001 </span>
 												<span class='test-status label right outline capitalize pass'>pass</span>
 												<span class='category-assigned hide '></span>
 											</div>
 											<div class='test-body'>
 												<div class='test-info'>
-													<span title='Test started time' alt='Test started time' class='test-started-time label green lighten-1 text-white'>2020-02-04 17:39:10</span>
-													<span title='Test ended time' alt='Test ended time' class='test-ended-time label red lighten-1 text-white'>2020-02-04 17:39:17</span>
-													<span title='Time taken to finish' alt='Time taken to finish' class='test-time-taken label blue-grey lighten-3 text-white'>0h 0m 6s+688ms</span>
+													<span title='Test started time' alt='Test started time' class='test-started-time label green lighten-1 text-white'>2019-11-26 20:15:14</span>
+													<span title='Test ended time' alt='Test ended time' class='test-ended-time label red lighten-1 text-white'>2019-11-26 20:15:20</span>
+													<span title='Time taken to finish' alt='Time taken to finish' class='test-time-taken label blue-grey lighten-3 text-white'>0h 0m 5s+938ms</span>
 												</div>
 												<div class='test-desc'></div>
 												<div class='test-attributes'>
@@ -284,7 +280,7 @@
 														<tbody>
 																<tr>
 																	<td class='status pass' title='pass' alt='pass'><i class='mdi-action-check-circle'></i></td>
-																	<td class='timestamp'>17:39:17</td>
+																	<td class='timestamp'>20:15:20</td>
 																	<td class='step-details'>Test Case PASSED IS # LOGIN_001 #</td>
 																</tr>
 														</tbody>
