--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -9,10 +9,10 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="7">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">27,041</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">32,657</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">com.vrt.testcases.HitNTrialTests</td><td><a href="#m0">ADMN012</a></td><td rowspan="1">1594142943758</td><td rowspan="1">16362</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">com.vrt.testcases.assetHubTest</td><td><a href="#m0">ASSTHB006b</a></td><td rowspan="1">1574692743410</td><td rowspan="1">23237</td></tr></tbody>
 </table>
-<h2>Default test</h2><h3 id="m0">com.vrt.testcases.HitNTrialTests#ADMN012</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th><th>Parameter #3</th><th>Parameter #4</th><th>Parameter #5</th><th>Parameter #6</th><th>Parameter #7</th><th>Parameter #8</th></tr><tr class="param stripe"><td>User2</td><td>2</td><td>111111.0</td><td>Mgr</td><td>System Administrator</td><td>9890983456</td><td>Abc@gmail.com</td><td>avsLOGO.jpg</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Default test</h2><h3 id="m0">com.vrt.testcases.assetHubTest#ASSTHB006b</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th><th>Parameter #3</th><th>Parameter #4</th><th>Parameter #5</th><th>Parameter #6</th><th>Parameter #7</th><th>Parameter #8</th><th>Parameter #9</th><th>Parameter #10</th><th>Parameter #11</th><th>Parameter #12</th></tr><tr class="param stripe"><td>ASSTHB006b</td><td>6b</td><td>HeatBath</td><td>AAS</td><td>HTC</td><td>VRT</td><td>1</td><td>cu m</td><td>11/25/2019</td><td>1</td><td>Weeks</td><td>Test Description for ASSTHB006b</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
