--- a/test-output/old/Command line suite/methods-alphabetical.html
+++ b/test-output/old/Command line suite/methods-alphabetical.html
@@ -1,26 +1,106 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Command line suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="b5b590">  <td>20/02/07 13:47:15</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HitNTrialTests.ASST02([Ljava.lang.Object;)[pri:0, instance:com.vrt.testcases.HitNTrialTests@256216b3]">ASST02</td> 
-  <td>main@586617651</td>   <td></td> </tr>
-<tr bgcolor="b5b590">  <td>20/02/07 13:47:15</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HitNTrialTests.ASST02([Ljava.lang.Object;)[pri:0, instance:com.vrt.testcases.HitNTrialTests@256216b3]">ASST02</td> 
-  <td>main@586617651</td>   <td></td> </tr>
-<tr bgcolor="b5b590">  <td>20/02/07 13:47:15</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HitNTrialTests.ASST02([Ljava.lang.Object;)[pri:0, instance:com.vrt.testcases.HitNTrialTests@256216b3]">ASST02</td> 
-  <td>main@586617651</td>   <td></td> </tr>
-<tr bgcolor="b5b590">  <td>20/02/07 13:47:15</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HitNTrialTests.ASST02([Ljava.lang.Object;)[pri:0, instance:com.vrt.testcases.HitNTrialTests@256216b3]">ASST02</td> 
-  <td>main@586617651</td>   <td></td> </tr>
-<tr bgcolor="b5b590">  <td>20/02/07 13:47:15</td>   <td>16</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HitNTrialTests.ASST02([Ljava.lang.Object;)[pri:0, instance:com.vrt.testcases.HitNTrialTests@256216b3]">ASST02</td> 
-  <td>main@586617651</td>   <td></td> </tr>
-<tr bgcolor="b5b590">  <td>20/02/07 13:47:15</td>   <td>16</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HitNTrialTests.ASST02([Ljava.lang.Object;)[pri:0, instance:com.vrt.testcases.HitNTrialTests@256216b3]">ASST02</td> 
-  <td>main@586617651</td>   <td></td> </tr>
-<tr bgcolor="b5b590">  <td>20/02/07 13:47:15</td>   <td>16</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HitNTrialTests.ASST02([Ljava.lang.Object;)[pri:0, instance:com.vrt.testcases.HitNTrialTests@256216b3]">ASST02</td> 
-  <td>main@586617651</td>   <td></td> </tr>
-<tr bgcolor="b5b590">  <td>20/02/07 13:47:15</td>   <td>16</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HitNTrialTests.ASST02([Ljava.lang.Object;)[pri:0, instance:com.vrt.testcases.HitNTrialTests@256216b3]">ASST02</td> 
-  <td>main@586617651</td>   <td></td> </tr>
-<tr bgcolor="b5b590">  <td>20/02/07 13:47:15</td>   <td>31</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;HitNTrialTests.endReport()[pri:0, instance:com.vrt.testcases.HitNTrialTests@256216b3]">&lt;&lt;endReport</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@586617651</td>   <td></td> </tr>
-<tr bgcolor="b5b590">  <td>20/02/07 13:47:15</td>   <td>16</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HitNTrialTests.getLastWeekDate()[pri:0, instance:com.vrt.testcases.HitNTrialTests@256216b3]">getLastWeekDate</td> 
-  <td>main@586617651</td>   <td></td> </tr>
-<tr bgcolor="b5b590">  <td>20/02/07 13:47:15</td>   <td>-813</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;HitNTrialTests.testsetup()[pri:0, instance:com.vrt.testcases.HitNTrialTests@256216b3]">&gt;&gt;testsetup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@586617651</td>   <td></td> </tr>
+<tr bgcolor="74868d">  <td>19/07/29 14:02:20</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.LOGIN_001()[pri:0, instance:com.vrt.testcases.LoginTest@33b37288]">LOGIN_001</td> 
+  <td>main@195615004</td>   <td></td> </tr>
+<tr bgcolor="74868d">  <td>19/07/29 14:02:27</td>   <td>7034</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.LOGIN_002()[pri:0, instance:com.vrt.testcases.LoginTest@33b37288]">LOGIN_002</td> 
+  <td>main@195615004</td>   <td></td> </tr>
+<tr bgcolor="74868d">  <td>19/07/29 14:02:30</td>   <td>9877</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.LOGIN_003()[pri:0, instance:com.vrt.testcases.LoginTest@33b37288]">LOGIN_003</td> 
+  <td>main@195615004</td>   <td></td> </tr>
+<tr bgcolor="74868d">  <td>19/07/29 14:02:33</td>   <td>12927</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.LOGIN_004()[pri:0, instance:com.vrt.testcases.LoginTest@33b37288]">LOGIN_004</td> 
+  <td>main@195615004</td>   <td></td> </tr>
+<tr bgcolor="74868d">  <td>19/07/29 14:02:37</td>   <td>17049</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.LOGIN_005()[pri:0, instance:com.vrt.testcases.LoginTest@33b37288]">LOGIN_005</td> 
+  <td>main@195615004</td>   <td></td> </tr>
+<tr bgcolor="74868d">  <td>19/07/29 14:02:52</td>   <td>32020</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.LOGIN_007()[pri:0, instance:com.vrt.testcases.LoginTest@33b37288]">LOGIN_007</td> 
+  <td>main@195615004</td>   <td></td> </tr>
+<tr bgcolor="74868d">  <td>19/07/29 14:02:57</td>   <td>37737</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.LOGIN_008()[pri:0, instance:com.vrt.testcases.LoginTest@33b37288]">LOGIN_008</td> 
+  <td>main@195615004</td>   <td></td> </tr>
+<tr bgcolor="74868d">  <td>19/07/29 14:03:00</td>   <td>40719</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.LOGIN_009()[pri:0, instance:com.vrt.testcases.LoginTest@33b37288]">LOGIN_009</td> 
+  <td>main@195615004</td>   <td></td> </tr>
+<tr bgcolor="74868d">  <td>19/07/29 14:03:15</td>   <td>54953</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.LOGIN_010()[pri:0, instance:com.vrt.testcases.LoginTest@33b37288]">LOGIN_010</td> 
+  <td>main@195615004</td>   <td></td> </tr>
+<tr bgcolor="74868d">  <td>19/07/29 14:03:18</td>   <td>58640</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.LOGIN_012()[pri:0, instance:com.vrt.testcases.LoginTest@33b37288]">LOGIN_012</td> 
+  <td>main@195615004</td>   <td></td> </tr>
+<tr bgcolor="74868d">  <td>19/07/29 14:03:28</td>   <td>68033</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.LOGIN_013()[pri:0, instance:com.vrt.testcases.LoginTest@33b37288]">LOGIN_013</td> 
+  <td>main@195615004</td>   <td></td> </tr>
+<tr bgcolor="74868d">  <td>19/07/29 14:03:34</td>   <td>74186</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.LOGIN_014()[pri:0, instance:com.vrt.testcases.LoginTest@33b37288]">LOGIN_014</td> 
+  <td>main@195615004</td>   <td></td> </tr>
+<tr bgcolor="74868d">  <td>19/07/29 14:03:47</td>   <td>87085</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.LOGIN_015()[pri:0, instance:com.vrt.testcases.LoginTest@33b37288]">LOGIN_015</td> 
+  <td>main@195615004</td>   <td></td> </tr>
+<tr bgcolor="74868d">  <td>19/07/29 14:03:57</td>   <td>96853</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.LOGIN_016()[pri:0, instance:com.vrt.testcases.LoginTest@33b37288]">LOGIN_016</td> 
+  <td>main@195615004</td>   <td></td> </tr>
+<tr bgcolor="74868d">  <td>19/07/29 14:04:11</td>   <td>111220</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.LOGIN_017_018()[pri:0, instance:com.vrt.testcases.LoginTest@33b37288]">LOGIN_017_018</td> 
+  <td>main@195615004</td>   <td></td> </tr>
+<tr bgcolor="74868d">  <td>19/07/29 14:04:38</td>   <td>138325</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.LOGIN_019()[pri:0, instance:com.vrt.testcases.LoginTest@33b37288]">LOGIN_019</td> 
+  <td>main@195615004</td>   <td></td> </tr>
+<tr bgcolor="74868d">  <td>19/07/29 14:05:06</td>   <td>166700</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.LOGIN_020()[pri:0, instance:com.vrt.testcases.LoginTest@33b37288]">LOGIN_020</td> 
+  <td>main@195615004</td>   <td></td> </tr>
+<tr bgcolor="74868d">  <td>19/07/29 14:02:14</td>   <td>-5526</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginTest.Setup()[pri:0, instance:com.vrt.testcases.LoginTest@33b37288]">&gt;&gt;Setup</td> 
+<td>&nbsp;</td>  <td>main@195615004</td>   <td></td> </tr>
+<tr bgcolor="74868d">  <td>19/07/29 14:02:24</td>   <td>4162</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginTest.Setup()[pri:0, instance:com.vrt.testcases.LoginTest@33b37288]">&gt;&gt;Setup</td> 
+<td>&nbsp;</td>  <td>main@195615004</td>   <td></td> </tr>
+<tr bgcolor="74868d">  <td>19/07/29 14:02:27</td>   <td>7093</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginTest.Setup()[pri:0, instance:com.vrt.testcases.LoginTest@33b37288]">&gt;&gt;Setup</td> 
+<td>&nbsp;</td>  <td>main@195615004</td>   <td></td> </tr>
+<tr bgcolor="74868d">  <td>19/07/29 14:02:30</td>   <td>10056</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginTest.Setup()[pri:0, instance:com.vrt.testcases.LoginTest@33b37288]">&gt;&gt;Setup</td> 
+<td>&nbsp;</td>  <td>main@195615004</td>   <td></td> </tr>
+<tr bgcolor="74868d">  <td>19/07/29 14:02:34</td>   <td>14281</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginTest.Setup()[pri:0, instance:com.vrt.testcases.LoginTest@33b37288]">&gt;&gt;Setup</td> 
+<td>&nbsp;</td>  <td>main@195615004</td>   <td></td> </tr>
+<tr bgcolor="74868d">  <td>19/07/29 14:02:49</td>   <td>29152</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginTest.Setup()[pri:0, instance:com.vrt.testcases.LoginTest@33b37288]">&gt;&gt;Setup</td> 
+<td>&nbsp;</td>  <td>main@195615004</td>   <td></td> </tr>
+<tr bgcolor="74868d">  <td>19/07/29 14:02:55</td>   <td>34864</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginTest.Setup()[pri:0, instance:com.vrt.testcases.LoginTest@33b37288]">&gt;&gt;Setup</td> 
+<td>&nbsp;</td>  <td>main@195615004</td>   <td></td> </tr>
+<tr bgcolor="74868d">  <td>19/07/29 14:02:58</td>   <td>37798</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginTest.Setup()[pri:0, instance:com.vrt.testcases.LoginTest@33b37288]">&gt;&gt;Setup</td> 
+<td>&nbsp;</td>  <td>main@195615004</td>   <td></td> </tr>
+<tr bgcolor="74868d">  <td>19/07/29 14:03:12</td>   <td>52267</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginTest.Setup()[pri:0, instance:com.vrt.testcases.LoginTest@33b37288]">&gt;&gt;Setup</td> 
+<td>&nbsp;</td>  <td>main@195615004</td>   <td></td> </tr>
+<tr bgcolor="74868d">  <td>19/07/29 14:03:16</td>   <td>55792</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginTest.Setup()[pri:0, instance:com.vrt.testcases.LoginTest@33b37288]">&gt;&gt;Setup</td> 
+<td>&nbsp;</td>  <td>main@195615004</td>   <td></td> </tr>
+<tr bgcolor="74868d">  <td>19/07/29 14:03:25</td>   <td>65195</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginTest.Setup()[pri:0, instance:com.vrt.testcases.LoginTest@33b37288]">&gt;&gt;Setup</td> 
+<td>&nbsp;</td>  <td>main@195615004</td>   <td></td> </tr>
+<tr bgcolor="74868d">  <td>19/07/29 14:03:31</td>   <td>71294</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginTest.Setup()[pri:0, instance:com.vrt.testcases.LoginTest@33b37288]">&gt;&gt;Setup</td> 
+<td>&nbsp;</td>  <td>main@195615004</td>   <td></td> </tr>
+<tr bgcolor="74868d">  <td>19/07/29 14:03:44</td>   <td>84171</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginTest.Setup()[pri:0, instance:com.vrt.testcases.LoginTest@33b37288]">&gt;&gt;Setup</td> 
+<td>&nbsp;</td>  <td>main@195615004</td>   <td></td> </tr>
+<tr bgcolor="74868d">  <td>19/07/29 14:03:54</td>   <td>94038</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginTest.Setup()[pri:0, instance:com.vrt.testcases.LoginTest@33b37288]">&gt;&gt;Setup</td> 
+<td>&nbsp;</td>  <td>main@195615004</td>   <td></td> </tr>
+<tr bgcolor="74868d">  <td>19/07/29 14:04:08</td>   <td>108306</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginTest.Setup()[pri:0, instance:com.vrt.testcases.LoginTest@33b37288]">&gt;&gt;Setup</td> 
+<td>&nbsp;</td>  <td>main@195615004</td>   <td></td> </tr>
+<tr bgcolor="74868d">  <td>19/07/29 14:04:35</td>   <td>135531</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginTest.Setup()[pri:0, instance:com.vrt.testcases.LoginTest@33b37288]">&gt;&gt;Setup</td> 
+<td>&nbsp;</td>  <td>main@195615004</td>   <td></td> </tr>
+<tr bgcolor="74868d">  <td>19/07/29 14:05:03</td>   <td>163709</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginTest.Setup()[pri:0, instance:com.vrt.testcases.LoginTest@33b37288]">&gt;&gt;Setup</td> 
+<td>&nbsp;</td>  <td>main@195615004</td>   <td></td> </tr>
+<tr bgcolor="74868d">  <td>19/07/29 14:02:24</td>   <td>4134</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginTest.Teardown()[pri:0, instance:com.vrt.testcases.LoginTest@33b37288]">&lt;&lt;Teardown</td> 
+<td>&nbsp;</td>  <td>main@195615004</td>   <td></td> </tr>
+<tr bgcolor="74868d">  <td>19/07/29 14:02:27</td>   <td>7069</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginTest.Teardown()[pri:0, instance:com.vrt.testcases.LoginTest@33b37288]">&lt;&lt;Teardown</td> 
+<td>&nbsp;</td>  <td>main@195615004</td>   <td></td> </tr>
+<tr bgcolor="74868d">  <td>19/07/29 14:02:30</td>   <td>10025</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginTest.Teardown()[pri:0, instance:com.vrt.testcases.LoginTest@33b37288]">&lt;&lt;Teardown</td> 
+<td>&nbsp;</td>  <td>main@195615004</td>   <td></td> </tr>
+<tr bgcolor="74868d">  <td>19/07/29 14:02:34</td>   <td>14258</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginTest.Teardown()[pri:0, instance:com.vrt.testcases.LoginTest@33b37288]">&lt;&lt;Teardown</td> 
+<td>&nbsp;</td>  <td>main@195615004</td>   <td></td> </tr>
+<tr bgcolor="74868d">  <td>19/07/29 14:02:49</td>   <td>29128</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginTest.Teardown()[pri:0, instance:com.vrt.testcases.LoginTest@33b37288]">&lt;&lt;Teardown</td> 
+<td>&nbsp;</td>  <td>main@195615004</td>   <td></td> </tr>
+<tr bgcolor="74868d">  <td>19/07/29 14:02:55</td>   <td>34837</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginTest.Teardown()[pri:0, instance:com.vrt.testcases.LoginTest@33b37288]">&lt;&lt;Teardown</td> 
+<td>&nbsp;</td>  <td>main@195615004</td>   <td></td> </tr>
+<tr bgcolor="74868d">  <td>19/07/29 14:02:58</td>   <td>37772</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginTest.Teardown()[pri:0, instance:com.vrt.testcases.LoginTest@33b37288]">&lt;&lt;Teardown</td> 
+<td>&nbsp;</td>  <td>main@195615004</td>   <td></td> </tr>
+<tr bgcolor="74868d">  <td>19/07/29 14:03:12</td>   <td>52252</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginTest.Teardown()[pri:0, instance:com.vrt.testcases.LoginTest@33b37288]">&lt;&lt;Teardown</td> 
+<td>&nbsp;</td>  <td>main@195615004</td>   <td></td> </tr>
+<tr bgcolor="74868d">  <td>19/07/29 14:03:16</td>   <td>55771</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginTest.Teardown()[pri:0, instance:com.vrt.testcases.LoginTest@33b37288]">&lt;&lt;Teardown</td> 
+<td>&nbsp;</td>  <td>main@195615004</td>   <td></td> </tr>
+<tr bgcolor="74868d">  <td>19/07/29 14:03:25</td>   <td>65171</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginTest.Teardown()[pri:0, instance:com.vrt.testcases.LoginTest@33b37288]">&lt;&lt;Teardown</td> 
+<td>&nbsp;</td>  <td>main@195615004</td>   <td></td> </tr>
+<tr bgcolor="74868d">  <td>19/07/29 14:03:31</td>   <td>71268</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginTest.Teardown()[pri:0, instance:com.vrt.testcases.LoginTest@33b37288]">&lt;&lt;Teardown</td> 
+<td>&nbsp;</td>  <td>main@195615004</td>   <td></td> </tr>
+<tr bgcolor="74868d">  <td>19/07/29 14:03:44</td>   <td>84139</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginTest.Teardown()[pri:0, instance:com.vrt.testcases.LoginTest@33b37288]">&lt;&lt;Teardown</td> 
+<td>&nbsp;</td>  <td>main@195615004</td>   <td></td> </tr>
+<tr bgcolor="74868d">  <td>19/07/29 14:03:54</td>   <td>94012</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginTest.Teardown()[pri:0, instance:com.vrt.testcases.LoginTest@33b37288]">&lt;&lt;Teardown</td> 
+<td>&nbsp;</td>  <td>main@195615004</td>   <td></td> </tr>
+<tr bgcolor="74868d">  <td>19/07/29 14:04:08</td>   <td>108284</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginTest.Teardown()[pri:0, instance:com.vrt.testcases.LoginTest@33b37288]">&lt;&lt;Teardown</td> 
+<td>&nbsp;</td>  <td>main@195615004</td>   <td></td> </tr>
+<tr bgcolor="74868d">  <td>19/07/29 14:04:35</td>   <td>135504</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginTest.Teardown()[pri:0, instance:com.vrt.testcases.LoginTest@33b37288]">&lt;&lt;Teardown</td> 
+<td>&nbsp;</td>  <td>main@195615004</td>   <td></td> </tr>
+<tr bgcolor="74868d">  <td>19/07/29 14:05:03</td>   <td>163686</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginTest.Teardown()[pri:0, instance:com.vrt.testcases.LoginTest@33b37288]">&lt;&lt;Teardown</td> 
+<td>&nbsp;</td>  <td>main@195615004</td>   <td></td> </tr>
+<tr bgcolor="74868d">  <td>19/07/29 14:05:54</td>   <td>214058</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginTest.Teardown()[pri:0, instance:com.vrt.testcases.LoginTest@33b37288]">&lt;&lt;Teardown</td> 
+<td>&nbsp;</td>  <td>main@195615004</td>   <td></td> </tr>
 </table>
