--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,14 +1,14 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="78a366">  <td>20/07/07 22:58:53</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;HitNTrialTests.testsetup()[pri:0, instance:com.vrt.testcases.HitNTrialTests@2353b3e6]">&gt;&gt;testsetup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1113619023</td>   <td></td> </tr>
-<tr bgcolor="78a366">  <td>20/07/07 22:58:54</td>   <td>610</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;HitNTrialTests.Setup()[pri:0, instance:com.vrt.testcases.HitNTrialTests@2353b3e6]">&gt;&gt;Setup</td> 
-<td>&nbsp;</td>  <td>main@1113619023</td>   <td></td> </tr>
-<tr bgcolor="78a366">  <td>20/07/07 22:59:03</td>   <td>10340</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HitNTrialTests.ADMN012(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.vrt.testcases.HitNTrialTests@2353b3e6]">ADMN012</td> 
-  <td>main@1113619023</td>   <td></td> </tr>
-<tr bgcolor="78a366">  <td>20/07/07 22:59:20</td>   <td>26705</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;HitNTrialTests.Teardown(org.testng.ITestResult)[pri:0, instance:com.vrt.testcases.HitNTrialTests@2353b3e6]">&lt;&lt;Teardown</td> 
-<td>&nbsp;</td>  <td>main@1113619023</td>   <td></td> </tr>
-<tr bgcolor="78a366">  <td>20/07/07 22:59:20</td>   <td>26818</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;HitNTrialTests.endReport()[pri:0, instance:com.vrt.testcases.HitNTrialTests@2353b3e6]">&lt;&lt;endReport</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1113619023</td>   <td></td> </tr>
+<tr bgcolor="78a366">  <td>19/11/25 20:08:54</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;assetHubTest.AssetCreationSetup()[pri:0, instance:com.vrt.testcases.assetHubTest@2173f6d9]">&gt;&gt;AssetCreationSetup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@175408781</td>   <td></td> </tr>
+<tr bgcolor="78a366">  <td>19/11/25 20:08:55</td>   <td>780</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;assetHubTest.Setup()[pri:0, instance:com.vrt.testcases.assetHubTest@2173f6d9]">&gt;&gt;Setup</td> 
+<td>&nbsp;</td>  <td>main@175408781</td>   <td></td> </tr>
+<tr bgcolor="78a366">  <td>19/11/25 20:09:03</td>   <td>9170</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="assetHubTest.ASSTHB006b(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.vrt.testcases.assetHubTest@2173f6d9]">ASSTHB006b</td> 
+  <td>main@175408781</td>   <td></td> </tr>
+<tr bgcolor="78a366">  <td>19/11/25 20:09:26</td>   <td>32407</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;assetHubTest.Teardown(org.testng.ITestResult)[pri:0, instance:com.vrt.testcases.assetHubTest@2173f6d9]">&lt;&lt;Teardown</td> 
+<td>&nbsp;</td>  <td>main@175408781</td>   <td></td> </tr>
+<tr bgcolor="78a366">  <td>19/11/25 20:09:26</td>   <td>32438</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;assetHubTest.endReport_releaseMomory()[pri:0, instance:com.vrt.testcases.assetHubTest@2173f6d9]">&lt;&lt;endReport_releaseMomory</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@175408781</td>   <td></td> </tr>
 </table>
