--- a/test-output/old/Failed suite [Default suite]/classes.html
+++ b/test-output/old/Failed suite [Default suite]/classes.html
@@ -4,78 +4,19 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>com.vrt.testcases.assetHubTest</td>
+<td>com.vrt.testcases.assetCreationTest</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>ASSTHB011</td>
-<td>Sanity Regression </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>ASSTHB010</td>
-<td>Regression </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>ASSTHB004</td>
-<td>Regression </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>ASSTHB003</td>
-<td>Regression </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>ASSTHB002</td>
-<td>Regression </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>ASSTHB001</td>
-<td>Sanity Regression </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>ASSTHB006b</td>
-<td>Regression </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>ASSTHB007</td>
-<td>Regression </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>ASSTHB005</td>
-<td>Regression </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>ASSTHB009</td>
-<td>Regression </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>ASSTHB006a</td>
-<td>Regression </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>ASSTHB008</td>
-<td>Regression </td>
+<td>ASST112a</td>
+<td>Verify if the Asset Size text box accepts inputs as numeric and special characters such as point or comma. </td>
 </tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
 </tr>
-<tr>
-<td>&nbsp;</td>
-<td>AssetCreationSetup</td>
-<td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeMethod</td>
 </tr>
@@ -93,8 +34,4 @@
 <tr>
 <td align='center' colspan='3'>@AfterClass</td>
 </tr>
-<tr>
-<td>&nbsp;</td>
-<td>endReport_releaseMomory</td>
-<td>&nbsp;</td></tr>
 </table>
