--- a/test-output/old/Failed suite [Default suite]/methods.html
+++ b/test-output/old/Failed suite [Default suite]/methods.html
@@ -1,20 +1,28 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Failed suite [Default suite]</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="87ed94">  <td>19/12/18 15:14:04</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;assetHubTest.AssetCreationSetup()[pri:0, instance:com.vrt.testcases.assetHubTest@1a1d6a08]">&gt;&gt;AssetCreationSetup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@775931202</td>   <td></td> </tr>
-<tr bgcolor="87ed94">  <td>19/12/18 15:14:44</td>   <td>40454</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;assetHubTest.Setup()[pri:0, instance:com.vrt.testcases.assetHubTest@1a1d6a08]">&gt;&gt;Setup</td> 
-<td>&nbsp;</td>  <td>main@775931202</td>   <td></td> </tr>
-<tr bgcolor="87ed94">  <td>19/12/18 15:14:53</td>   <td>49089</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="assetHubTest.ASSTHB002()[pri:0, instance:com.vrt.testcases.assetHubTest@1a1d6a08]">ASSTHB002</td> 
-  <td>main@775931202</td>   <td></td> </tr>
-<tr bgcolor="87ed94">  <td>19/12/18 15:14:53</td>   <td>49180</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;assetHubTest.Teardown(org.testng.ITestResult)[pri:0, instance:com.vrt.testcases.assetHubTest@1a1d6a08]">&lt;&lt;Teardown</td> 
-<td>&nbsp;</td>  <td>main@775931202</td>   <td></td> </tr>
-<tr bgcolor="87ed94">  <td>19/12/18 15:14:54</td>   <td>50447</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;assetHubTest.Setup()[pri:0, instance:com.vrt.testcases.assetHubTest@1a1d6a08]">&gt;&gt;Setup</td> 
-<td>&nbsp;</td>  <td>main@775931202</td>   <td></td> </tr>
-<tr bgcolor="87ed94">  <td>19/12/18 15:15:03</td>   <td>59262</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="assetHubTest.ASSTHB006a(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.vrt.testcases.assetHubTest@1a1d6a08]">ASSTHB006a</td> 
-  <td>main@775931202</td>   <td></td> </tr>
-<tr bgcolor="87ed94">  <td>19/12/18 15:15:30</td>   <td>86232</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;assetHubTest.Teardown(org.testng.ITestResult)[pri:0, instance:com.vrt.testcases.assetHubTest@1a1d6a08]">&lt;&lt;Teardown</td> 
-<td>&nbsp;</td>  <td>main@775931202</td>   <td></td> </tr>
-<tr bgcolor="87ed94">  <td>19/12/18 15:15:30</td>   <td>86258</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;assetHubTest.endReport_releaseMomory()[pri:0, instance:com.vrt.testcases.assetHubTest@1a1d6a08]">&lt;&lt;endReport_releaseMomory</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@775931202</td>   <td></td> </tr>
+<tr bgcolor="61b7af">  <td>19/05/02 18:43:21</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;assetCreationTest.Setup()[pri:0, instance:com.vrt.testcases.assetCreationTest@6e1ec318]">&gt;&gt;Setup</td> 
+<td>&nbsp;</td>  <td>main@1033490990</td>   <td></td> </tr>
+<tr bgcolor="61b7af">  <td>19/05/02 18:43:35</td>   <td>13802</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="assetCreationTest.ASST112a(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.vrt.testcases.assetCreationTest@6e1ec318]">ASST112a</td> 
+  <td>main@1033490990</td>   <td></td> </tr>
+<tr bgcolor="61b7af">  <td>19/05/02 18:43:39</td>   <td>18294</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;assetCreationTest.Teardown()[pri:0, instance:com.vrt.testcases.assetCreationTest@6e1ec318]">&lt;&lt;Teardown</td> 
+<td>&nbsp;</td>  <td>main@1033490990</td>   <td></td> </tr>
+<tr bgcolor="61b7af">  <td>19/05/02 18:43:39</td>   <td>18333</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;assetCreationTest.Setup()[pri:0, instance:com.vrt.testcases.assetCreationTest@6e1ec318]">&gt;&gt;Setup</td> 
+<td>&nbsp;</td>  <td>main@1033490990</td>   <td></td> </tr>
+<tr bgcolor="61b7af">  <td>19/05/02 18:43:51</td>   <td>30236</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="assetCreationTest.ASST112a(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.vrt.testcases.assetCreationTest@6e1ec318]">ASST112a</td> 
+  <td>main@1033490990</td>   <td></td> </tr>
+<tr bgcolor="61b7af">  <td>19/05/02 18:44:03</td>   <td>42337</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;assetCreationTest.Teardown()[pri:0, instance:com.vrt.testcases.assetCreationTest@6e1ec318]">&lt;&lt;Teardown</td> 
+<td>&nbsp;</td>  <td>main@1033490990</td>   <td></td> </tr>
+<tr bgcolor="61b7af">  <td>19/05/02 18:44:03</td>   <td>42372</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;assetCreationTest.Setup()[pri:0, instance:com.vrt.testcases.assetCreationTest@6e1ec318]">&gt;&gt;Setup</td> 
+<td>&nbsp;</td>  <td>main@1033490990</td>   <td></td> </tr>
+<tr bgcolor="61b7af">  <td>19/05/02 18:44:16</td>   <td>54935</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="assetCreationTest.ASST112a(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.vrt.testcases.assetCreationTest@6e1ec318]">ASST112a</td> 
+  <td>main@1033490990</td>   <td></td> </tr>
+<tr bgcolor="61b7af">  <td>19/05/02 18:44:20</td>   <td>59324</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;assetCreationTest.Teardown()[pri:0, instance:com.vrt.testcases.assetCreationTest@6e1ec318]">&lt;&lt;Teardown</td> 
+<td>&nbsp;</td>  <td>main@1033490990</td>   <td></td> </tr>
+<tr bgcolor="61b7af">  <td>19/05/02 18:44:20</td>   <td>59354</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;assetCreationTest.Setup()[pri:0, instance:com.vrt.testcases.assetCreationTest@6e1ec318]">&gt;&gt;Setup</td> 
+<td>&nbsp;</td>  <td>main@1033490990</td>   <td></td> </tr>
+<tr bgcolor="61b7af">  <td>19/05/02 18:44:31</td>   <td>70213</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="assetCreationTest.ASST112a(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.vrt.testcases.assetCreationTest@6e1ec318]">ASST112a</td> 
+  <td>main@1033490990</td>   <td></td> </tr>
+<tr bgcolor="61b7af">  <td>19/05/02 18:44:36</td>   <td>74686</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;assetCreationTest.Teardown()[pri:0, instance:com.vrt.testcases.assetCreationTest@6e1ec318]">&lt;&lt;Teardown</td> 
+<td>&nbsp;</td>  <td>main@1033490990</td>   <td></td> </tr>
 </table>
