--- a/test-output/old/Failed suite [Failed suite [Default suite]]/groups.html
+++ b/test-output/old/Failed suite [Failed suite [Default suite]]/groups.html
@@ -1,1 +1,3 @@
-<h2>Groups used for this test run</h2>
+<h2>Groups used for this test run</h2><table border="1">
+<tr> <td align="center"><b>Group name</b></td><td align="center"><b>Methods</b></td></tr><tr><td>Verify if the Asset Size text box accepts inputs as numeric and special characters such as point or comma.</td><td>assetCreationTest.ASST112a(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.vrt.testcases.assetCreationTest@6e1ec318]<br/></td></tr>
+</table>
