--- a/test-output/old/Failed suite [Failed suite [Default suite]]/methods-alphabetical.html
+++ b/test-output/old/Failed suite [Failed suite [Default suite]]/methods-alphabetical.html
@@ -1,2 +1,16 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Failed suite [Failed suite [Default suite]]</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
+<table border="1">
+<tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
+<tr bgcolor="61b7af">  <td>19/05/02 18:46:03</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="assetCreationTest.ASST112a(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.vrt.testcases.assetCreationTest@6e1ec318]">ASST112a</td> 
+  <td>main@1033490990</td>   <td></td> </tr>
+<tr bgcolor="61b7af">  <td>19/05/02 18:46:20</td>   <td>16846</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="assetCreationTest.ASST112a(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.vrt.testcases.assetCreationTest@6e1ec318]">ASST112a</td> 
+  <td>main@1033490990</td>   <td></td> </tr>
+<tr bgcolor="61b7af">  <td>19/05/02 18:45:50</td>   <td>-12326</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;assetCreationTest.Setup()[pri:0, instance:com.vrt.testcases.assetCreationTest@6e1ec318]">&gt;&gt;Setup</td> 
+<td>&nbsp;</td>  <td>main@1033490990</td>   <td></td> </tr>
+<tr bgcolor="61b7af">  <td>19/05/02 18:46:07</td>   <td>4516</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;assetCreationTest.Setup()[pri:0, instance:com.vrt.testcases.assetCreationTest@6e1ec318]">&gt;&gt;Setup</td> 
+<td>&nbsp;</td>  <td>main@1033490990</td>   <td></td> </tr>
+<tr bgcolor="61b7af">  <td>19/05/02 18:46:07</td>   <td>4478</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;assetCreationTest.Teardown()[pri:0, instance:com.vrt.testcases.assetCreationTest@6e1ec318]">&lt;&lt;Teardown</td> 
+<td>&nbsp;</td>  <td>main@1033490990</td>   <td></td> </tr>
+<tr bgcolor="61b7af">  <td>19/05/02 18:46:24</td>   <td>21317</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;assetCreationTest.Teardown()[pri:0, instance:com.vrt.testcases.assetCreationTest@6e1ec318]">&lt;&lt;Teardown</td> 
+<td>&nbsp;</td>  <td>main@1033490990</td>   <td></td> </tr>
 </table>
